--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,16 @@ dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2.16
 django-allauth==0.57.2
+django-braces==1.16.0
 django-crispy-forms==2.3
+django-model-utils==5.0.0
+django-star-ratings==0.9.2
 django-summernote==0.8.20.0
+google-api-core==2.23.0
+google-api-python-client==2.154.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.66.0
 gunicorn==20.1.0
 httplib2==0.22.0
 oauthlib==3.2.2
@@ -23,6 +31,7 @@ python3-openid==3.2.0
 requests-oauthlib==2.0.0
 rsa==4.9
 sqlparse==0.5.2
+swapper==1.4.0
 uritemplate==4.1.1
 urllib3==1.26.20
 whitenoise==5.3.0
