--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==4.2.16
 django-allauth==0.57.2
 django-braces==1.16.0
 django-crispy-forms==2.3
+django-extensions==3.2.3
 django-model-utils==5.0.0
 django-star-ratings==0.9.2
 django-summernote==0.8.20.0
