--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==4.2.16
 django-allauth==0.57.2
 django-braces==1.16.0
 django-crispy-forms==2.3
+django-erd==1.0
 django-extensions==3.2.3
 django-model-utils==5.0.0
 django-star-ratings==0.9.2
@@ -27,6 +28,7 @@ protobuf==5.28.3
 psycopg==3.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pydot==3.0.3
 PyJWT==2.10.0
 pyparsing==3.2.0
 python3-openid==3.2.0
