--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 begins==0.9
+black==24.10.0
 cachetools==5.5.0
+click==8.1.7
 cloudinary==1.41.0
 crispy-bootstrap5==0.7
 dj-database-url==0.5.0
@@ -22,6 +24,7 @@ googleapis-common-protos==1.66.0
 gunicorn==20.1.0
 httplib2==0.22.0
 oauthlib==3.2.2
+pathspec==0.12.1
 pillow==11.0.0
 proto-plus==1.25.0
 protobuf==5.28.3
